--- a/nette-api-app/composer.json
+++ b/nette-api-app/composer.json
@@ -8,7 +8,8 @@
         "nette/bootstrap": "^2.4",
         "nette/robot-loader": "^3.0",
         "latte/latte": "^2.5",
-        "tomaj/nette-api": "^1.16"
+        "tomaj/nette-api": "^1.16",
+        "rector/rector-prefixed": "0.9.5"
 
     }
 }
